src/python/webapp/app2/app_2_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: web-app
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: arieltar/flaskapp2
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
