src/python/webapp/app2/app_2_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2-svc
  namespace: web-app
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
